# amazon-sagemaker-drift-detection

./: .flake8  .gitignore  ACTIONS.md  BUILD.md  README.md  app.py  cdk.json  drift-service-catalog.yml  package-lock.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-deploy-pipeline.yml  publish-template.yml
batch_pipeline/: README.md  app.py  batch-pipeline.ipynb  buildspec.yml  cdk.json  prod-config.json  pyproject.toml  requirements.txt  setup.py  staging-config.json
batch_pipeline/infra/: batch_config.py  model_registry.py  sagemaker_pipeline_stack.py
batch_pipeline/pipelines/: pipeline.py  postprocess_monitor_script.py  score.py
build_pipeline/: .gitignore  README.md  app.py  batch-pipeline.ipynb  build-pipeline.ipynb  cdk.json  deployment-pipeline.ipynb  drift-detection.ipynb  lineage.ipynb  pyproject.toml  requirements.txt  setup.py  visualizer.py
build_pipeline/infra/: sagemaker_pipeline_stack.py
build_pipeline/pipelines/: evaluate.py  pipeline.py  preprocess.py
build_pipeline/pipelines/preprocess/: preprocess.py  requirements.txt
cloudformation/: drift-service-catalog.yml  github-actions-setup.yml
demo/: README.md  drift-detection.ipynb
deployment_pipeline/: .gitignore  README.md  app.py  buildspec.yml  prod-config.json  pyproject.toml  requirements.txt  setup.py  staging-config.json
deployment_pipeline/infra/: deployment_config.py  model_registry.py  sagemaker_lineage_utils.py  sagemaker_pipelines_event_target.py  sagemaker_service_catalog_roles_construct.py  sagemaker_stack.py  test_model_registry.py
docs/: inline-policy.json
infra/: batch_pipeline_construct.py  build_pipeline_construct.py  clean_template.py  deploy_pipeline_construct.py  generate_sc_template.py  pipeline_product_stack.py  pipeline_stack.py  service_catalog_stack.py  upload_assets.py
lambda/: lowercase_name.py
lambda/batch/: lambda_add_header.py  lambda_evaluate_drift.py
notebook/: nyctaxi.ipynb
