[tool.poetry]
name = "amazon-sagemaker-drift-detection"
version = "0.1.0"
description = ""
authors = ["y"]

[tool.poetry.dependencies]
python = "^3.9"
aws-cdk-lib = "^2.38.0"
constructs = "^10.1.79"


[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}
sagemaker = "^2.112.2"
xgboost = "1.2"
scikit-learn = "0.23"
boto3="^1.18.14"
pyvis = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
