[tool.poetry]
name = "sagemaker-driftdemobatch-batch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sagemaker_driftdemobatch_batch"}]

[tool.poetry.dependencies]
python = "^3.9"
constructs = "^10.1.300"
aws-cdk-lib = "^2.72.1"
boto3 = "^1.26.104"
sagemaker = "^2.143.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
boto3 = "^1.26.142"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
